<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:cardCornerRadius="22dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_detail_large"
            android:layout_width="@dimen/large_dimen"
            android:layout_height="@dimen/large_dimen"
            android:contentDescription="@string/full_image"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/f_user_name"
            style="@style/UserNameStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/almendra"
            android:textStyle="bold|italic"
            android:text="@string/username1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_of_likes" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/f_image_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/almendra"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/f_user_name" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/almendra"
            android:textStyle="bold|italic"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_baseline_favorite_24"
            app:layout_constraintBottom_toTopOf="@+id/f_image_tags"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_detail_large" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/number_of_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/almendra"
            android:textStyle="bold|italic"
            android:layout_marginStart="8dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/downloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_downward_24"
            app:layout_constraintBottom_toBottomOf="@+id/number_of_likes"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.312"
            app:layout_constraintStart_toEndOf="@+id/number_of_likes"
            app:layout_constraintTop_toTopOf="@+id/number_of_likes"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/number_of_downloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/almendra"
            android:text="@string/downloads"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/downloads"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toEndOf="@+id/downloads"
            app:layout_constraintTop_toTopOf="@+id/downloads"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_baseline_comment_24"
            app:layout_constraintBottom_toBottomOf="@+id/number_of_downloads"
            app:layout_constraintEnd_toStartOf="@+id/number_of_comments"
            app:layout_constraintTop_toTopOf="@+id/number_of_downloads" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/number_of_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/almendra"
            android:text="@string/comments"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/number_of_downloads" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>